--- a/manifest.json
+++ b/manifest.json
@@ -1,50 +1,18 @@
 {
-  "name": "Movia TI",
-  "short_name": "MoviaTI",
-  "description": "Movia TI es una app de transporte inteligente que elimina el tiempo de espera, conecta operadores con usuarios en tiempo real y mejora la movilidad en el Estado de México.",
-  "start_url": "/index.html",
-  "scope": "/",
+  "name": "MOVIA TI",
+  "short_name": "MOVIA TI",
+  "start_url": "./index.html",
   "display": "standalone",
-  "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#007bff",
-  "lang": "es-MX",
-  "categories": ["transporte", "movilidad", "viajes"],
-  "dir": "ltr",
+  "theme_color": "#0078d7",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
