--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
   "background_color": "#ffffff",
   "theme_color": "#1976d2",
   "orientation": "portrait-primary",
+  "id": "/index.html",
   "icons": [
     {
       "src": "icons/icon-192x192.png",
